--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "react-hot-boilerplate",
-  "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "name": "react-slides",
+  "version": "0.1.0",
+  "description": "A simple presentation slide system build in ReactJS.",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
+    "url": "git@github.com:leadiv/react-slides.git"
   },
   "keywords": [
     "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack"
+    "reactjs"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Paul Borrego <paul@leadiv.com> (http://github.com/leadiv)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
-  },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
+  "homepage": "https://github.com/leadiv/react-slides",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.0.20",
