--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "axios": "0.11.0",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-redux": "4.4.5"
   }
 }
