--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "axios": "0.11.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-redux": "4.4.5"
+    "react-redux": "4.4.5",
+    "redux": "3.5.2",
+    "redux-logger": "2.6.1",
+    "redux-thunk": "2.0.1"
   }
 }
